--- a/Site Web/index.html
+++ b/Site Web/index.html
@@ -48,7 +48,7 @@
 
       <!-- Contenu principal -->
       <div class="main-content">
-        <section class="hero">
+        <section class="p-div">
           <h1>Explorez la Créativité à son Apogée</h1>
           <p>
             Des outils puissants pour libérer votre imagination. Créez des
@@ -141,9 +141,9 @@
         </div>
 
         <!-- Footer -->
-        <div class="footer">
+        <footer>
           <p>&copy; 2024 Clone Canva. Tous droits réservés.</p>
-        </div>
+        </footer>
       </div>
     </div>
 
