--- a/Site Web/index.html
+++ b/Site Web/index.html
@@ -11,16 +11,20 @@
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="icon" href="./images/icon.png" type="image/png" />
   </head>
+  
   <body>
     <!-- Header -->
     <header>
       <div class="logo">
-        <img
-          src="./images/8439b51bb7a19f6e65ce1064bc37c197.svg"
-          alt="Logo Canva"
-        />
+        <a href="https://www.canva.com/">
+          <img
+            src="./images/8439b51bb7a19f6e65ce1064bc37c197.svg"
+            alt="Logo Canva"
+          />
+        </a>
       </div>
-      <div class="nav">
+
+      <div class="header-div">
         <input
           type="text"
           class="search-bar"
