--- a/Site Web/sources/login.html
+++ b/Site Web/sources/login.html
@@ -11,12 +11,15 @@
   <body>
     <header>
       <div class="logo">
-        <img
+        <a href="https://www.canva.com/">
+          <img
           src="../images/8439b51bb7a19f6e65ce1064bc37c197.svg"
           alt="Logo Canva"
-        />
+          />
+        </a>
       </div>
-      <div class="nav">
+
+      <div class="header-div">
         <input
           type="text"
           class="search-bar"
@@ -45,7 +48,14 @@
 
       <!-- Contenu principal -->
       <div class="main-content">
+
+        
         <div class="login-container">
+          <div class="login-box">
+            <h1>
+              Se Connecter
+            </h1>
+          </div>
 
           <div class="login-box">
             <input id="email" type="email" placeholder="email">
@@ -55,6 +65,11 @@
         
           </div>
         </div>
+
+        <!-- Footer -->
+        <footer>
+          <p>&copy; 2024 Clone Canva. Tous droits réservés.</p>
+        </footer>
       </div>
 
     </div>
