--- a/Site Web/sources/login.html
+++ b/Site Web/sources/login.html
@@ -14,7 +14,7 @@
   <header>
     <div class="logo">
       <a href="https://www.canva.com/">
-        <img src="../images/8439b51bb7a19f6e65ce1064bc37c197.svg" alt="Logo Canva" />
+        <img src="../images/logo.svg" alt="Logo Canva" />
       </a>
     </div>
 
@@ -30,13 +30,27 @@
     <!-- Barre latérale -->
     <div class="sidebar">
       <ul>
-        <li><a class="icon-home" href="../index.html">Accueil</a></li>
-        <li><a class="icon-templates" href="../sources/ecomobilite.html">Eco Mobilite</a></li>
-        <li><a class="icon-projects" href="../sources/covoiturage.html">Covoiturage</a></li>
-        <li><a class="icon-settings" href="../sources/location.html">Location</a></li>
-        <li><a class="icon-photos" href="../sources/velo.html">Velo</a></li>
-        <li><a class="icon-elements" href="../sources/trotinette.html">Trotinette</a></li>
-        <li><a class="icon-all" href="../sources/info.html">Info</a></li>
+        <a class="icon-home" href="../index.html">
+          <li>Accueil</li>
+        </a>
+        <a class="icon-templates" href="../sources/ecomobilite.html">
+          <li>Eco Mobilite</li>
+        </a>
+        <a class="icon-projects" href="../sources/covoiturage.html">
+          <li>Covoiturage</li>
+        </a>
+        <a class="icon-settings" href="../sources/location.html">
+          <li>Location</li>
+        </a>
+        <a class="icon-photos" href="../sources/velo.html">
+          <li>Velo</li>
+        </a>
+        <a class="icon-elements" href="../sources/trotinette.html">
+          <li>Trotinette</li>
+        </a>
+        <a class="icon-all" href="../sources/info.html">
+          <li>Info</li>
+        </a>
       </ul>
     </div>
 
