--- a/Site Web/sources/register.html
+++ b/Site Web/sources/register.html
@@ -43,6 +43,21 @@
     <!-- Contenu principal -->
     <div class="main-content">
 
+      <div class="login-container">
+        <div class="login-box">
+          <h1>
+            S'Inscrire
+          </h1>
+        </div>
+
+        <div class="login-box">
+          <input id="email" type="email" placeholder="email@canva.au"></input>
+          <input id="mdp" type="password" placeholder="mot de passe"></input>
+          <!-- changer la redirection -->
+          <button id="continue-btn"><a href="#">s'inscrire</a></button>
+
+        </div>
+      </div>
 
       <!-- Footer -->
       <footer>
