--- a/Site Web/sources/login.html
+++ b/Site Web/sources/login.html
@@ -14,14 +14,14 @@
   <header>
     <div class="logo">
       <a href="https://www.canva.com/">
-        <img src="../images/logo.svg" alt="Logo Canva" />
+        <img src="../images/8439b51bb7a19f6e65ce1064bc37c197.svg" alt="Logo Canva" />
       </a>
     </div>
 
     <div class="header-div">
       <input type="text" class="search-bar" placeholder="Rechercher des modèles, éléments..." />
-      <button class="btn-login">Se connecter</button>
-      <button class="btn-signup">Créer un compte</button>
+      <button class="btn-login"><a href="./login.html">Se connecter</a></button>
+      <button class="btn-signup"><a href="./register.html">créer un compte</a></button>
     </div>
   </header>
 
@@ -30,33 +30,18 @@
     <!-- Barre latérale -->
     <div class="sidebar">
       <ul>
-        <a class="icon-home" href="../index.html">
-          <li>Accueil</li>
-        </a>
-        <a class="icon-templates" href="../sources/ecomobilite.html">
-          <li>Eco Mobilite</li>
-        </a>
-        <a class="icon-projects" href="../sources/covoiturage.html">
-          <li>Covoiturage</li>
-        </a>
-        <a class="icon-settings" href="../sources/location.html">
-          <li>Location</li>
-        </a>
-        <a class="icon-photos" href="../sources/velo.html">
-          <li>Velo</li>
-        </a>
-        <a class="icon-elements" href="../sources/trotinette.html">
-          <li>Trotinette</li>
-        </a>
-        <a class="icon-all" href="../sources/info.html">
-          <li>Info</li>
-        </a>
+        <li><a class="icon-home" href="../index.html">Accueil</a></li>
+        <li><a class="icon-templates" href="./ecomobilite.html">Eco Mobilite</a></li>
+        <li><a class="icon-projects" href="./covoiturage.html">Covoiturage</a></li>
+        <li><a class="icon-settings" href="./location.html">Location</a></li>
+        <li><a class="icon-photos" href="./velo.html">Velo</a></li>
+        <li><a class="icon-elements" href="./trotinette.html">Trotinette</a></li>
+        <li><a class="icon-all" href="./about.html">Info</a></li>
       </ul>
     </div>
 
     <!-- Contenu principal -->
     <div class="main-content">
-
 
       <div class="login-container">
         <div class="login-box">
@@ -66,10 +51,10 @@
         </div>
 
         <div class="login-box">
-          <input id="email" type="email" placeholder="email">
+          <input id="email" type="email" placeholder="email@canva.au">
           <input id="mdp" type="password" placeholder="mot de passe"></input>
           <!-- changer la redirection -->
-          <button id="continue-btn"><a href="#">continue</a></button>
+          <button id="continue-btn"><a href="#">se connecter</a></button>
 
         </div>
       </div>
