--- a/Site Web/sources/register.html
+++ b/Site Web/sources/register.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../css/login.css" />
   <link rel="icon" href="../images/icon.png" type="image/png" />
-  <title>Login</title>
+  <title>Register</title>
 </head>
 
 <body>
@@ -30,19 +30,25 @@
       <!-- Barre latérale -->
       <div class="sidebar">
         <ul>
-          <a href="../index.html">
+          <a class="icon-home" href="../index.html">
             <li>Accueil</li>
           </a>
-          <a href="./covoiturage.html">
+          <a class="icon-templates" href="./ecomobilite.html">
+            <li>Eco Mobilite</li>
+          </a>
+          <a class="icon-projects" href="./covoiturage.html">
             <li>Covoiturage</li>
           </a>
-          <a href="./creneau.html">
-            <li>Creneau Covoiturage</li>
+          <a class="icon-settings" href="./location.html">
+            <li>Location</li>
           </a>
-          <a href="./location.html">
-            <li>Location EcoMobilité</li>
+          <a class="icon-photos" href="./velo.html">
+            <li>Velo</li>
           </a>
-          <a href="./about.html">
+          <a class="icon-elements" href="./trotinette.html">
+            <li>Trotinette</li>
+          </a>
+          <a class="icon-all" href="./about.html">
             <li>Info</li>
           </a>
         </ul>
@@ -54,15 +60,15 @@
         <div class="login-container">
           <div class="login-box">
             <h1>
-              Se Connecter
+              S'Inscrire
             </h1>
           </div>
 
           <div class="login-box">
-            <input id="email" type="email" placeholder="email@canva.au">
+            <input id="email" type="email" placeholder="email@canva.au"></input>
             <input id="mdp" type="password" placeholder="mot de passe"></input>
             <!-- changer la redirection -->
-            <button id="continue-btn"><a href="#">se connecter</a></button>
+            <button id="continue-btn"><a href="#">s'inscrire</a></button>
 
           </div>
         </div>
