--- a/Site Web/sources/covoiturage.html
+++ b/Site Web/sources/covoiturage.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../css/style.css" />
   <link rel="stylesheet" href="../css/creneau.css" />
+  <link rel="stylesheet" href="../css/about.css" />
   <link rel="icon" href="../images/icon.png" type="image/png" />
   <title>Register</title>
 </head>
@@ -61,6 +62,7 @@
             <div class="container-row">
               <h1>Formulaire d'inscription</h1>
             </div>
+            <hr/>
             <div class="formulaire">
               <form>
                 <h3>Type de Vehicule</h3>
@@ -107,13 +109,14 @@
             </div>
             <br>
             <input class="valide" type="submit" value="Ajouter">
+            <footer>
+              <p>&copy; 2024 Clone Canva. Tous droits réservés.</p>
+            </footer>
           </div>
         </div>
       </div>
   </main>
-  <footer>
-    <p>&copy; 2024 Clone Canva. Tous droits réservés.</p>
-  </footer>
+  
 </body>
 
 </html>
