--- a/Site Web/sources/creneau.html
+++ b/Site Web/sources/creneau.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/style.css" />
     <link rel="stylesheet" href="../css/creneau.css" />
+    <link rel="stylesheet" href="../css/about.css" />
     <link rel="icon" href="../images/icon.png" type="image/png" />
     <title>Register</title>
 </head>
@@ -57,9 +58,11 @@
                 <!-- Contenu principal -->
                 <div class="main-content">
                     <div class="container-size">
+                    <div class="container-size">
                         <div class="container-row">
                             <h1>about</h1>
                         </div>
+                        <hr>
                         <table>
                             <caption>
 
@@ -113,14 +116,15 @@
                                 </tr>
                             </tbody>
                         </table>
-
+                        <footer>
+                            <p>&copy; 2024 Clone Canva. Tous droits réservés.</p>
+                        </footer>
                     </div>
+                </div>
                 </div>
             </div>
     </main>
-    <footer>
-        <p>&copy; 2024 Clone Canva. Tous droits réservés.</p>
-    </footer>
+    
 </body>
 
 </html>
