--- a/Site Web/sources/location.html
+++ b/Site Web/sources/location.html
@@ -1,112 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/about.css" />
+    <link rel="stylesheet" href="../css/location.css" />
+    <link rel="icon" href="../images/icon.png" type="image/png" />
+    <title>Register</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="../css/style.css" />
-  <link rel="stylesheet" href="../css/about.css" />
-  <link rel="icon" href="../images/icon.png" type="image/png" />
-  <title>Register</title>
-</head>
+  <body>
+    <header>
+      <div class="logo">
+        <a href="https://www.canva.com/">
+          <img src="../images/logo.svg" alt="Logo Canva" />
+        </a>
+      </div>
 
-<body>
-  <header>
-    <div class="logo">
-      <a href="https://www.canva.com/">
-        <img src="../images/logo.svg" alt="Logo Canva" />
-      </a>
-    </div>
-
-    <div class="header-div">
-      <input type="text" class="search-bar" placeholder="Rechercher des modèles, éléments..." />
-      <button class="btn-login">
-        <a href="./login.html">Se connecter</a>
-      </button>
-      <button class="btn-signup">
-        <a href="./register.html">créer un compte</a>
-      </button>
-    </div>
-  </header>
-  <main>
-    <!-- Conteneur principal pour Sidebar et Content -->
-    <div class="container">
-      <!-- Barre latérale -->
+      <div class="header-div">
+        <input
+          type="text"
+          class="search-bar"
+          placeholder="Rechercher des modèles, éléments..."
+        />
+        <button class="btn-login">
+          <a href="./login.html">Se connecter</a>
+        </button>
+        <button class="btn-signup">
+          <a href="./register.html">créer un compte</a>
+        </button>
+      </div>
+    </header>
+    <main>
+      <!-- Conteneur principal pour Sidebar et Content -->
       <div class="container">
         <!-- Barre latérale -->
-        <div class="sidebar">
-          <ul>
-            <a href="../index.html">
-              <li>Accueil</li>
-            </a>
-            <a href="./covoiturage.html">
-              <li>Covoiturage</li>
-            </a>
-            <a href="./creneau.html">
-              <li>Creneau Covoiturage</li>
-            </a>
-            <a href="./location.html">
-              <li>Location EcoMobilité</li>
-            </a>
-            <a href="./about.html">
-              <li>Info</li>
-            </a>
-          </ul>
-        </div>
+        <div class="container">
+          <!-- Barre latérale -->
+          <div class="sidebar">
+            <ul>
+              <a href="../index.html">
+                <li>Accueil</li>
+              </a>
+              <a href="./covoiturage.html">
+                <li>Covoiturage</li>
+              </a>
+              <a href="./creneau.html">
+                <li>Creneau Covoiturage</li>
+              </a>
+              <a href="./location.html">
+                <li>Location EcoMobilité</li>
+              </a>
+              <a href="./about.html">
+                <li>Info</li>
+              </a>
+            </ul>
+          </div>
 
-        <!-- Contenu principal -->
-        <div class="main-content">
-          <div class="container-size">
-            <div class="container-row">
-              <h1>about</h1>
-            </div>
-            <hr />
-
-            <div class="container-row" id="row1">
-              <div class="container-col" id="communication">
-                <h2>Communication</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Sit
-                  optio ea nostrum recusandae, obcaecati laboriosam nobis rem
-                  temporibus voluptatum! Omnis, magnam odio iste aperiam itaque
-                  blanditiis eos nam cumque consectetur.
-                </p>
+          <!-- Contenu principal -->
+          <div class="main-content">
+            <div class="container-size">
+              <div class="container-row">
+                <h1>Location</h1>
               </div>
-              <img src="../images/communication.png" alt="img comm" />
-            </div>
-            <div class="container-row" id="row2">
-              <img src="../images/eco.jpg" alt="img eco" />
-              <div class="container-col" id="eco">
-                <h2>Eco</h2>
-                <p>
-                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Atque
-                  error non voluptates aspernatur cum doloremque cumque a
-                  voluptatum similique officiis laudantium nulla accusantium hic
-                  voluptatibus, voluptate dolor cupiditate impedit ad.
-                </p>
+              <hr />
+              <div class="container-row">
+                <div class="container-col">
+                  <h2><img src="../images/velo2.png" alt="velo" /></h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Officia odit sit, officiis ipsam ratione, odio perferendis
+                    praesentium iusto repudiandae ea debitis voluptatum
+                    explicabo hic fugit. Sequi debitis officia nulla suscipit
+                  </p>
+                </div>
+                <div class="container-col">
+                  <h2>
+                    <img src="../images/trotinette.png" alt="trotinette" />
+                  </h2>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Fugit neque voluptatem tempore ipsum dicta cupiditate quia
+                    corporis soluta iure voluptatibus cumque quas odio sint
+                    error, minus veritatis magni nihil eaque?
+                  </p>
+                </div>
               </div>
+              <!-- Footer -->
+              <footer>
+                <p>&copy; 2024 Clone Canva. Tous droits réservés.</p>
+              </footer>
             </div>
-            <div class="container-row" id="row3">
-              <div class="container-col" id="entraide">
-                <h2>Entraide</h2>
-                <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit
-                  repudiandae rerum, sint consequatur sunt tenetur qui facere quod
-                  natus est quos ratione eum adipisci illo a accusamus numquam
-                  quas explicabo!
-                </p>
-              </div>
-              <img src="../images/entraide.jpg" alt="img entraide" />
-            </div>
-            <!-- Footer -->
-
           </div>
         </div>
       </div>
-  </main>
-  <footer>
-    <p>&copy; 2024 Clone Canva. Tous droits réservés.</p>
-  </footer>
-</body>
-
+    </main>
+  </body>
 </html>
