--- a/Site Web/sources/covoiturage.html
+++ b/Site Web/sources/covoiturage.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="../css/style.css" />
-  <link rel="stylesheet" href="../css/creneau.css" />
+  <link rel="stylesheet" href="../css/covoiturage.css" />
   <link rel="stylesheet" href="../css/about.css" />
   <link rel="icon" href="../images/icon.png" type="image/png" />
-  <title>Register</title>
+  <title>Covoiturage</title>
 </head>
 
 <body>
