--- a/Site Web/sources/creneau.html
+++ b/Site Web/sources/creneau.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="../css/creneau.css" />
     <link rel="stylesheet" href="../css/about.css" />
     <link rel="icon" href="../images/icon.png" type="image/png" />
-    <title>Register</title>
+    <title>Creneau</title>
 </head>
 
 <body>
@@ -58,9 +58,8 @@
                 <!-- Contenu principal -->
                 <div class="main-content">
                     <div class="container-size">
-                    <div class="container-size">
                         <div class="container-row">
-                            <h1>about</h1>
+                            <h1>Creneau</h1>
                         </div>
                         <hr>
                         <table>
